Closed Bug 1824396 Opened 3 years ago Closed 3 years ago

Sprinter is not initialized in LAllocation::toString()

Categories

(Core :: JavaScript Engine: JIT, defect, P1)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox111 --- unaffected
firefox112 --- wontfix
firefox113 --- fixed

People

(Reporter: iain, Assigned: iain)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

When I reviewed Denis's patch for adding jitdump support for LIR operands, I missed that we didn't initialize a Sprinter.

Set release status flags based on info from the regressing bug 1814105

Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch

The patch landed in nightly and beta is affected.
:iain, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox112 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(iireland)

This only affects developer tooling. No need for an uplift.

Flags: needinfo?(iireland)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: