Bug 1824396: Initialize sprinter r=dpalmeiro

Differential Revision: https://phabricator.services.mozilla.com/D173535